# crossy-road-gymnasium

./: .gitignore  PLAN.md  README.md  crossy_agent.py  evaluate.py  play_trained_gui.py  plot_learning_curves.py  pyproject.toml  requirements.txt  run_crossy_road.py  run_crossy_road_gui.py  train_ppo.py  trening.html  trening.ipynb
gymnasium_env/: __init__.py
gymnasium_env/core/: __init__.py  config.py  constants.py  engine.py  entities.py  generator.py
gymnasium_env/envs/: __init__.py  crossy_road.py
gymnasium_env/renderers/: __init__.py  ansi_renderer.py  pygame_renderer.py
training_logs/: monitor_0.csv.monitor.csv  monitor_1.csv.monitor.csv  monitor_2.csv.monitor.csv  monitor_3.csv.monitor.csv
training_logs/eval/: evaluations.npz  monitor_9999.csv.monitor.csv
training_logs/tensorboard/PPO_1/: events.out.tfevents.1777459767.laptoppatryk.25420.0
training_logs/tensorboard/PPO_2/: events.out.tfevents.1777469007.laptoppatryk.14976.0
training_logs/tensorboard/PPO_3/: events.out.tfevents.1777472163.laptoppatryk.25292.0
training_logs/tensorboard/PPO_4/: events.out.tfevents.1777473706.laptoppatryk.21876.0
training_logs/tensorboard/PPO_5/: events.out.tfevents.1777479063.laptoppatryk.28640.0
training_logs/tensorboard/PPO_6/: events.out.tfevents.1777628754.laptoppatryk.4248.0
training_logs/tensorboard/PPO_7/: events.out.tfevents.1777634231.laptoppatryk.4248.1
