[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymnasium_env"
version = "0.0.1"
description = "Custom Gymnasium Crossy Road environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gymnasium_env"]
